@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+16-Aug-2003
+~~~~~~~~~~~
+Added ability to call external programs to generate thumbnails for types 
+other than image/* (Stephen Watson).
+
 12-Aug-2003
 ~~~~~~~~~~~
 If a string can't be converted from the local character set to UTF-8,
